<resources>
    <string name="app_name">iHome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pm_tag1">PowerManager1</string>
    <string name="pm_tag2">PowerManager2</string>
    <string name="pm_tag3">PowerManager3</string>
    <!-- 隐私权限申请说明 -->
    <string name="privacy_permission_desc">开发者使用鹰眼SDK时，需申请以下权限。授权方式由设备系统开发方及开发者应用决定，当最终用户同意向开发者应用授予该权时开启。
        \n 1、精确定位权限，用于访问GPS数据。
        \n 2、存储权限，用于写入对象存储BOS数据。
        \n 3、前台服务权限，用于前台服务通知，Android 8.0之后需动态申请。
        \n 4、后台定位权限，用于后台定位，Android 10.0 之后需动态申请</string>
    <!-- 退到后台隐私合规说明 -->
    <string name="background_privacy_desc">根据相关监管要求，在静默状态下或在后台运行时，如非服务所必需或无合理应用场景，不得收集用户信息。
        开发者需遵循以上监管要求，仅在必需和合理的应用场景时进行静默状态和后台运行时的信息采集。</string>


    <string name="intro_message">
        <![CDATA[
            This sample demonstrates how to create a managed profile. You can also learn how to
            enable or disable other apps and how to set restrictions to them. Intents can be
            configured to be forwarded between primary account and managed profile. Finally, you can
            wipe all the data associated with the profile.
            Note that there can only be one managed profile on a device.
        ]]>
    </string>
    <string name="set_up_profile">Set up profile</string>
    <string name="enable_forwarding">Enable forwarding of Share Intent</string>
    <string name="send_intent_text">Send a sample share Intent</string>
    <string name="disable_forwarding">Disable forwarding</string>
    <string name="setup_profile_message">This app is currently not a profile owner.</string>
    <string name="main_message">The app is ready to control the managed profile.</string>
    <string name="remove_profile">Remove managed profile</string>
    <string name="all_done">Setup all done</string>
    <string name="all_done_explanation">To manage the configuration in your managed profile, visit the badged version of this application.</string>
    <string name="toggle_calculator">Calculator in this profile: </string>
    <string name="toggle_chrome">Chrome in this profile:</string>
    <string name="set_chrome_restrictions">Set Chrome restrictions</string>
    <string name="clear_chrome_restrictions">Clear Chrome restrictions</string>
    <string name="icon">Icon</string>
    <string name="profile_name">Sample Managed Profile</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="restrictions_set">Restrictions set.</string>
    <string name="activity_not_found">No app can handle this intent.</string>
    <string name="cleared">Cleared.</string>

    <string name="text_title">微信</string>
    <string name="text_group">Ble Scan</string>
    <string name="text_add">blemainactivity</string>
    <string name="text_sweep">扫一扫</string>
    <string name="text_collect">收付款</string>
    <string name="text_help">帮助与反馈</string>

</resources>